--- a/UGolf/UGolf/Views/StoryBoards/Base.lproj/Main.storyboard
+++ b/UGolf/UGolf/Views/StoryBoards/Base.lproj/Main.storyboard
@@ -14,6 +14,7 @@
                     <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="2oT-SX-TUg">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="49"/>
                         <autoresizingMask key="autoresizingMask"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     </tabBar>
                     <connections>
                         <segue destination="fur-KK-yPS" kind="relationship" relationship="viewControllers" id="5Hf-XP-kBe"/>
