--- a/UGolf/UGolf/Views/StoryBoards/Base.lproj/LaunchScreen.storyboard
+++ b/UGolf/UGolf/Views/StoryBoards/Base.lproj/LaunchScreen.storyboard
@@ -1,7 +1,9 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="19162" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
+    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19144"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -11,15 +13,41 @@
             <objects>
                 <viewController id="01J-lp-oVM" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="Ze5-6b-2t3">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" xcode11CocoaTouchSystemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="logo" translatesAutoresizingMaskIntoConstraints="NO" id="cNm-1n-ejV">
+                                <rect key="frame" x="60" y="312.5" width="294" height="281"/>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="UGolf" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9PS-vg-Ylb">
+                                <rect key="frame" x="113" y="225.5" width="188" height="57"/>
+                                <fontDescription key="fontDescription" name="Georgia-Bold" family="Georgia" pointSize="49"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                                <color key="shadowColor" red="0.2104722718" green="0.55154639179999998" blue="0.22481247260000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <size key="shadowOffset" width="4" height="-1"/>
+                            </label>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
+                        <color key="backgroundColor" red="0.33962749957761168" green="0.89000000000000001" blue="0.36276749079363652" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="cNm-1n-ejV" firstAttribute="width" secondItem="Ze5-6b-2t3" secondAttribute="width" multiplier="0.710145" id="707-TI-mbg"/>
+                            <constraint firstItem="9PS-vg-Ylb" firstAttribute="height" secondItem="Ze5-6b-2t3" secondAttribute="height" multiplier="0.0636161" id="Q2P-Ex-OSd"/>
+                            <constraint firstItem="cNm-1n-ejV" firstAttribute="top" secondItem="9PS-vg-Ylb" secondAttribute="bottom" constant="30" id="QvK-xG-DD3"/>
+                            <constraint firstItem="9PS-vg-Ylb" firstAttribute="width" secondItem="Ze5-6b-2t3" secondAttribute="width" multiplier="0.454106" id="VlX-Uv-e1m"/>
+                            <constraint firstItem="cNm-1n-ejV" firstAttribute="height" secondItem="Ze5-6b-2t3" secondAttribute="height" multiplier="0.313616" id="WWw-qf-hFo"/>
+                            <constraint firstItem="cNm-1n-ejV" firstAttribute="centerY" secondItem="6Tk-OE-BBY" secondAttribute="centerY" id="fXo-lE-FJs"/>
+                            <constraint firstItem="9PS-vg-Ylb" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="fsa-BL-2FY"/>
+                            <constraint firstItem="cNm-1n-ejV" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="y31-ww-7lf"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="53" y="375"/>
+            <point key="canvasLocation" x="52.173913043478265" y="375"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="logo" width="1024" height="1024"/>
+    </resources>
 </document>
